--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,13 @@
 /* === Google Fonts === */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 /* === Tailwind === */
 @import "tailwindcss";
 
 /* === CSS Variables === */
 :root {
 /* === Backgrounds & Neutrals === */
+
   --color-bg: #f9fafb; /* soft white */
   --color-bg-soft: #f5f5f5; /* warm gray */
   --color-bg-muted: #e5e7eb; /* light muted gray */
@@ -141,5 +142,14 @@
 
   .container {
     @apply mx-auto px-4 max-w-7xl;
+  }
+  .input-box{
+    @apply w-full text-sm bg-transparent border-[1.5px] px-5 py-3 rounded mb-4 ;
+  }
+  .btn-primary{
+    @apply w-full text-sm bg-blue-800 text-white rounded my-1 hover:bg-blue-500 h-8;
+  }
+  .fill {
+    font-family: 'Roboto', sans-serif;
   }
 }
