--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 /* === Google Fonts === */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 /* === Tailwind === */
 @import "tailwindcss";
 
@@ -100,13 +101,14 @@
   }
 
   html, body {
-    margin: 0;
-    padding: 0;
-    font-family: var(--font-poppins);
-    background-color: var(--color-bg);
-    color: var(--color-text);
-    scroll-behavior: smooth;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--color-bg);
+  color: var(--color-text);
+  scroll-behavior: smooth;
+}
+
 
   a {
     color: inherit;
@@ -151,5 +153,31 @@
   }
   .fill {
     font-family: 'Roboto', sans-serif;
+  }
+}
+
+@layer utilities {
+  @media (max-width: 380px) {
+    .custom-cols {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+
+  @media (min-width: 381px) and (max-width: 760px) {
+    .custom-cols {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+
+  @media (min-width: 761px) and (max-width: 1279px) {
+    .custom-cols {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .custom-cols {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
   }
 }
