--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -180,7 +180,21 @@
       grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
+
+  @media (min-width: 1000px) {
+  .show-above-1000px {
+    display: block !important;
+  }
 }
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  box-shadow: 0 0 0px 1000px transparent inset !important;
+  -webkit-text-fill-color: white !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 
 /* Scrollbar styles for theatre list */
 ::-webkit-scrollbar {
